# ccp4i2-django

./: .gitignore  LICENSE  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
server/: asgi.py  manage.py  pyproject.toml  requirements.txt
server/ccp4ui/: __main__.py  logging.py  server.py
server/ccp4ui/api/: config.py  serializers.py  urls.py  views.py
server/ccp4ui/config/: settings.py  urls.py
server/ccp4ui/db/: config.py  models.py
server/ccp4ui/db/migrations/: 0001_initial.py
server/ccp4ui/lib/: links.py  parse.py  sequence.py  utils.py  web.py
server/ccp4ui/tests/lib/: test_parse.py  test_sequence.py  test_utils.py  test_web.py
server/ccp4x/api/: FileTypeViewSet.py  FileViewSet.py  JobViewSet.py  ProjectTagViewSet.py  ProjectViewSet.py  config.py  serializers.py  test_api.py  urls.py  views.py
server/ccp4x/config/: settings.py
server/ccp4x/db/: ccp4i2_django_db_handler.py  ccp4i2_django_dbapi.py  ccp4i2_django_projects_manager.py  ccp4i2_django_wrapper.py  ccp4i2_projects_manager.py  ccp4i2_static_data.py  config.py  export_project_json.py  i2models.py  import_all_test_projects.sh  import_i2xml.py  models.py  test_ccp4_projects_manager.py  test_import_i2xml.py
server/ccp4x/i2run/: CCP4i2RunnerBase.py  CCP4i2RunnerDjango.py  i2run.sh
server/ccp4x/lib/: ccp4i2_report.py  ccp4i2_runner.py  job_utils.py  parse.py  test_report.py  utils.py
server/ccp4x/lib/job_utils/: ccp4i2_report.py  clone_job.py  create_job.py  create_task.py  detect_file_type.py  digest_file.py  export_job_mtz_file.py  find_dependent_jobs.py  (+30 more)
(+424 files in other folders)
