[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccp4ui"
dynamic = ["version"]
authors = [{ name = "Paul Bond", email = "paul.bond@york.ac.uk" }]
maintainers = [{ name = "Paul Bond", email = "paul.bond@york.ac.uk" }]
description = "Interface for CCP4 software"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["CCP4", "X-ray", "Crystallography", "MX", "Interface", "GUI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",
]
dependencies = [
    "django-cors-headers",
    "django-filter",
    "django",
    "djangorestframework",
    "gemmi",
    "pytest",
    "requests-cache",
    "requests",
]
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/paulsbond/ccp4ui"
Issues = "https://github.com/paulsbond/ccp4ui/issues"

[tool.setuptools.dynamic]
version = { attr = "ccp4ui.__version__" }
